cmake_minimum_required(VERSION 2.8)
project( Colortracking )
find_package( OpenCV REQUIRED )
find_package(depthai CONFIG REQUIRED)
# find_package(catkin REQUIRED COMPONENTS serial)
include_directories( ${OpenCV_INCLUDE_DIRS} )
# include_directories( ${DepthAI_INCLUDE_DIRS} )
add_executable( Colortracking main.cpp )
# add_executable( testing main_test.cpp )

# add_executable( cam_ctrl rgb_camera_control.cpp)
target_link_libraries( Colortracking ${OpenCV_LIBS} )
target_link_libraries( Colortracking PRIVATE depthai::opencv)
# target_link_libraries( Colortracking serial)

# target_link_libraries( cam_ctrl ${DepthAI_LIBS} )
